--- a/asp_net_sample/sample_app/sample_app/Web.config
+++ b/asp_net_sample/sample_app/sample_app/Web.config
@@ -7,7 +7,7 @@
   <appSettings>
     <add key="defaultFactory" value="Npgsql" />
     <add key="logFile" value="D:\Temp\Logs\main.log" />
-    <add key="defaultConnectionString" value="MembershipConnectionPgsql" />
+    <add key="defaultConnectionString" value="sample_db_connection" />
   </appSettings>
   <connectionStrings>
     <add name="sample_db_connection" connectionString="Server=127.0.0.1;Port=5432;Database=football_manager;User Id=postgres;Password=123;" />
